--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,21 @@
         <!--            <version>6.2.0.Final</version>-->
         <!--        </dependency>-->
         <!-- -->
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+        <!-- -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+
+        <!-- 阿里连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
