--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.2.8</version>
