--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,8 +7,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath:spring-service.xml,
-            classpath:spring-dao.xml
+            classpath:applicationContext.xml
         </param-value>
     </context-param>
 
@@ -17,7 +16,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:dispatcher-servlet.xml</param-value>
+            <param-value>classpath:applicationContext.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
